--- a/ngAuction/src/app/carousel/carousel.component.html
+++ b/ngAuction/src/app/carousel/carousel.component.html
@@ -1,1 +1,58 @@
-<p>carousel works!</p>
+<!-- Bootstrap way -->
+<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
+   <ol class="carousel-indicators">
+       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+       <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
+       <li data-target="#myCarousel" data-slide-to="2" class="active"></li>             
+   </ol> 
+   <div class="carousel-inner">
+       <div class="carousel-item active">
+           <img class="d-block w-100" src="https://picsum.photos/800/300">
+       </div>
+       <div class="carousel-item">
+            <img class="d-block w-100" src="https://picsum.photos/800/300">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://picsum.photos/800/300">
+        </div>
+   </div>
+   <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+       <span class="sr-only">previous</span>
+   </a>
+   <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">next</span>
+    </a>
+</div> -->
+
+<!-- ng Bootstrap way -->
+<ngb-carousel>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="https://picsum.photos/800/300?random=1">
+      </div>
+      <div class="carousel-caption">
+        <h3>First slide label</h3>
+        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="https://picsum.photos/800/300?random=2">
+      </div>
+      <div class="carousel-caption">
+        <h3>Second slide label</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="https://picsum.photos/800/300?random=3">
+      </div>
+      <div class="carousel-caption">
+        <h3>Third slide label</h3>
+        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+      </div>
+    </ng-template>
+  </ngb-carousel>
