--- a/ngAuction/src/app/home/home.component.html
+++ b/ngAuction/src/app/home/home.component.html
@@ -3,4 +3,8 @@
         <nga-carousel></nga-carousel>
     </div>
 </div>
-<div class="row"></div>
+<div class="row">
+    <div *ngFor="let product of products" class="col-sm-4 col-lg-4 col-md-4">
+        <nga-product-item [product]="product"></nga-product-item>
+    </div>
+</div>
