--- a/ngAuction/src/app/stars/stars.component.html
+++ b/ngAuction/src/app/stars/stars.component.html
@@ -1,1 +1,4 @@
-<p>stars works!</p>
+<p>
+    <span *ngFor="let isEmpty of stars" class="material-icons">{{isEmpty? 'star_border': 'star_rate'}}</span>
+    <span>{{ rating }} stars</span>
+</p>
